--- a/catalog/view/theme/helium/css/common.css
+++ b/catalog/view/theme/helium/css/common.css
@@ -239,11 +239,7 @@ a.button:focus {
     flex-wrap: wrap;
     padding: .5rem 0 0;
 }
-.input-group span[role="alert"], .form-group span[role="alert"] {
-    text-align: center;
-    font-weight: 600;
-    color: var(--color-red);
-}
+
 .form-control {
     display: grid;
     grid-template-columns: 30px auto;
@@ -776,13 +772,13 @@ aside>div.module{display: flex; flex-direction: column;}
 .toast {
     position: fixed;
     top: 20px;
-    right: 20px;
-    left: auto;
-    bottom: auto;
+	right: 20px;
+	left: auto;
+	bottom: auto;
     z-index: 3;
     opacity: 0.7;
     display: block;
-    padding: 10px 50px 10px 20px;
+    padding: 20px;
     color: #fff;
     transition: opacity var(--time);
     max-width: 250px;
