--- a/catalog/view/theme/helium/template/account/wishlist_table.twig
+++ b/catalog/view/theme/helium/template/account/wishlist_table.twig
@@ -1,10 +1,10 @@
 {% if success %}
-  {{ success }}
+    <span class="h2">{{ success }}</span>
 {% endif %}
 
 {% if products %}
   <h1>{{ heading_title }}</h1>
-  <div id="js_wishlist_table" class="table-responsive">
+  <div class="table-responsive">
     <table class="table table-bordered table-hover">
       <thead>
         <tr>
@@ -43,7 +43,7 @@
                 title="{{ button_cart }} {{ product.name }}">
                 <i class="icon-cart"></i>
               </button>
-              <button data-action="wishlistRemove" data-product-id="{{ product.product_id }}" title="{{ button_remove }}" class="close"></button>
+              <button {# href="{{ product.remove }}" #} onclick="wishlist.remove('{{ product.product_id }}');" title="{{ button_remove }}" class="close"></button>
             </td>
           </tr>
         {% endfor %}
