UPD: Button actions now in data attributes

--- a/catalog/view/theme/helium/template/product/product_miniature.twig
+++ b/catalog/view/theme/helium/template/product/product_miniature.twig
@@ -21,7 +21,7 @@
         {% include 'helium/template/common/rating_stars.twig' with {rating: product.rating, count: product.reviews} %}
       {% endif %} 
       {% if product.price_value and product.price_value != 0 %}
-        <p class="prices h3"> 
+        <p class="prices h3">
           {% if not product.special %}
             <span class="text-price">{{ text_price }}</span> {{ product.price }}
           {% else %} 
@@ -36,21 +36,21 @@
       {% endif %}
     </div>
     <div class="btn-group">
-    <button type="button" 
-      {% if product.price_value and product.price_value != 0 %} 
-        data-action="cartAdd" 
-        data-product_id="{{ product.product_id }}" 
-        data-minimum_qty="{{ product.minimum }}" 
-        aria-haspopup="dialog"
-      {% else %}
-        disabled
-      {% endif %}
-      class="add-to-cart primary" 
-      title="{{ button_cart }} {{ product.name }}">
-      <i class="icon-cart"></i> <span>{{ button_cart }}</span>
-    </button>
+      <button type="button" 
+        {% if product.price_value and product.price_value != 0 %} 
+          data-action="cartAdd" 
+          data-product_id="{{ product.product_id }}" 
+          data-minimum_qty="{{ product.minimum }}" 
+          aria-haspopup="dialog"
+        {% else %}
+          disabled
+        {% endif %}
+        class="add-to-cart primary" 
+        title="{{ button_cart }} {{ product.name }}">
+        <i class="icon-cart"></i> <span>{{ button_cart }}</span>
+      </button>
       <button type="button" data-action="wishlistAdd" data-product-id="{{ product.product_id }}" aria-haspopup="dialog" class="wishlist" title="{{ button_wishlist }}"><i class="icon-heart"></i></button>
-      <button type="button" data-action="" aria-haspopup="dialog" class="compare" title="{{ button_compare }}" onclick="compare.add('{{ product.product_id }}');"><i class="icon-compare"></i></button>
+      <button type="button" data-action="compareAdd" data-product-id="{{ product.product_id }}" aria-haspopup="dialog" class="compare" title="{{ button_compare }}"><i class="icon-compare"></i></button>
     </div>
   </div>
 </article>
