--- a/catalog/view/theme/helium/template/product/compare_table.twig
+++ b/catalog/view/theme/helium/template/product/compare_table.twig
@@ -1,148 +1,59 @@
-{% if products %}
+{% if table %}
+  {# {{ attribute_table | json_encode(constant('JSON_PRETTY_PRINT')) }} #}
   <h1>{{ heading_title }}</h1>
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <td colspan="{{ products|length + 1 }}"><strong>{{ text_product }}</strong></td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>{{ text_name }}</td>
-        {% for product in products %}
-          <td>
-            <a href="{{ product.href }}">
-              <span class="h3">{{ product.name }}</span>
-            </a>
-          </td>
-        {% endfor %} 
-      </tr>
-      <tr id="product_id_{{ product_id }}">
-        <td>{{ text_image }}</td>
-        {% for product in products %}
-          <td class="text-center">
-            {% if product.thumb %} 
-              <img loading="lazy" src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-thumbnail" /> 
-            {% endif %}
-          </td>
-        {% endfor %} </tr>
-      <tr>
-        <td>{{ text_price }}</td>
-        {% for product in products %}
-          <td>
-            {% if product.price %}
-              {% if not product.special %}
-                {{ product.price }}
-              {% else %} 
-                <strike>{{ product.price }}</strike> {{ product.special }}
-              {% endif %}
-            {% endif %}
-          </td>
-        {% endfor %} 
-      </tr>
-      <tr>
-        <td>{{ text_model }}</td>
-        {% for product in products %}
-          <td>{{ product.model }}</td>
-        {% endfor %} </tr>
-      <tr>
-        <td>{{ text_manufacturer }}</td>
-        {% for product in products %}
-          <td>{{ product.manufacturer }}</td>
-        {% endfor %} </tr>
-      <tr>
-        <td>{{ text_availability }}</td>
-        {% for product in products %}
-          <td>{{ product.availability }}</td>
-        {% endfor %} 
-      </tr>
-      {% if review_status %}
+  <table class="compare_table">
+    {% for row_key, row in table %}
+      {# Hide service data #}
+      {% if row_key not in service %}
         <tr>
-          <td>{{ text_rating }}</td>
-          {% for product in products %}
-          <td class=""> 
-            <div class="rating"> 
-            {% for i in 1..5 %}
-                {% if product.rating >= i %} 
-                  <i class="icon-star"></i>
-                {% else %}
-                    {%if rating -  i < 0 and rating != 0 %}
-                      <i class="icon-star-half"></i> {{ rating }}
-                    {% else %}
-                      <i class="icon-star-empty"></i>
-                    {% endif %}
+          {% for cell_key, cell in row %}
+            {# first in loop either first column or product name #}
+            {% if loop.first %}
+              <th>
+                {{cell}}
+                {% if row_key == 'attributes' %}
+                  {% for key, name in attribute_table %}
+                    <tr data-attribute-id="key"><td>{{ name.name }}</td></tr>
+                  {% endfor %}
                 {% endif %}
-            {% endfor %}
-            {% if product.reviews is defined %}
-              <span class="reviews-count">({{ product.reviews }})</span>
+              </th>
+            {% else %}
+              <td data-product_id="{{ table.product_id[cell_key] }}">
+                {% if row_key == 'thumb' %}
+                  <a href="{{ table.href[cell_key] }}">
+                    <img decoding="async" loading="lazy" src="{{ cell }}" alt="{{ table.name[cell_key] }}" title="{{ table.name[cell_key] }}"/>
+                  </a>
+                  
+                {% elseif row_key == 'name' %}
+                  <a href="{{ table.href[cell_key] }}">
+                    <h3>{{cell}}</h3>
+                  </a>
+                {% elseif row_key == 'rating' %}
+                  {% include 'helium/template/common/rating_stars.twig' with {rating: cell, count: table.reviews[cell_key]} %}
+                
+                {% elseif row_key == 'attributes' %}
+                  {% for attr_id, attr in table.attributes %}
+                    {# {{ attr_id }}<br/> #}
+                  {% endfor %}
+                {% elseif row_key == 'product_id' %}
+                  <div class="btn-group">
+                    <button type="button" {% if table.price_value[cell_key] != 0 %} data-action="cartAdd" data-product_id="{{ table.product_id[cell_key] }}" data-minimum_qty="{{ product.minimum }}" aria-haspopup="dialog" {% endif %} title="{{ button_cart }} {{ table.name[cell_key] }}" class="add-to-cart primary">
+                      <i class="icon-cart"></i>{{ button_cart }}
+                    </button>
+                    <button type="button" data-action="compareRemove" data-product_id="{{ table.product_id[cell_key] }}" title="{{ text_remove }} {{ table.name[cell_key] }}">
+                      <i class="icon-trash"></i>{{ text_remove }}
+                    </button>
+                  </div>
+                {% else %}
+                  {{cell}}
+                {% endif %}
+              </td>
             {% endif %}
-            </div>
-          </td>
-          {% endfor %} 
+          {% endfor %}
         </tr>
       {% endif %}
-      <tr>
-        <td>{{ text_summary }}</td>
-        {% for product in products %}
-          <td class="description">{{ product.description }}</td>
-        {% endfor %} </tr>
-      <tr>
-      <td>{{ text_weight }}</td>
-      {% for product in products %}
-        <td>{{ product.weight }}</td>
-      {% endfor %} </tr>
-      <tr>
-        <td>{{ text_dimension }}</td>
-        {% for product in products %}
-          <td>{{ product.length }} x {{ product.width }} x {{ product.height }}</td>
-        {% endfor %} 
-      </tr>
-    </tbody>
-    
-    {% for attribute_group in attribute_groups %}
-      <thead>
-        <tr>
-          <td colspan="{{ products|length + 1 }}"><strong>{{ attribute_group.name }}</strong></td>
-        </tr>
-      </thead>
-      {% for key, attribute in attribute_group.attribute %}
-        <tbody>
-          <tr>
-            <td>{{ attribute.name }}</td>
-            {% for product in products %}
-              {% if product.attribute[key] %}
-                <td> {{ product.attribute[key] }}</td>
-              {% else %}
-                <td></td>
-              {% endif %}
-            {% endfor %}
-          </tr>
-        </tbody>
-      {% endfor %}
     {% endfor %}
-    <tr>
-      <td></td>
-      {% for product in products %}
-        <td>
-          <button type="button" 
-            {% if product.price %}
-              data-action="cartAdd" 
-              data-product_id="{{ product.product_id }}"
-              data-minimum_qty="{{ product.minimum }}" 
-              aria-haspopup="dialog"
-            {% else %}
-              disabled
-            {% endif %}
-            title="{{ button_cart }} {{ name }}" 
-            class="add-to-cart primary">
-            {{ button_cart }}
-          </button>
-          
-          <a href="{{ product.remove }}" class="danger">{{ button_remove }}</a>
-        </td>
-      {% endfor %} 
-    </tr>
-  </table>
+    </table>
 {% else %}
     <p>{{ text_empty }}</p>
     <div class="buttons">
