--- a/admin/view/stylesheet/stylesheet.css
+++ b/admin/view/stylesheet/stylesheet.css
@@ -464,7 +464,7 @@ input[type="radio"], .radio input[type="radio"], .radio-inline input[type="radio
 
 input[type="radio"]:checked::after, .radio input[type="radio"]:checked::after, .radio-inline input[type="radio"]:checked::after {
     position: relative;
-    top: 3px;
+    /* top: 3px; */
     left: 3px;
     display: block;
     width: 7px;
