--- a/catalog/view/theme/helium/template/checkout/quick_checkout.twig
+++ b/catalog/view/theme/helium/template/checkout/quick_checkout.twig
@@ -57,7 +57,7 @@
       />
       <input
         type="text"
-        name="address"
+        name="address_1"
         value="{{ address_1 }}"
         placeholder="{{ entry_address_1 }}"
         id="input-quick-checkout-address-1"
