Minor fix order success page display

--- a/catalog/view/theme/helium/template/common/success.twig
+++ b/catalog/view/theme/helium/template/common/success.twig
@@ -1,7 +1,7 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main role="main" id="common-success">
-  <div class="row">
+  <div class="f-center">
     {{ content_top }}
     <div>
       <h1>{{ heading_title }}</h1>
