--- a/catalog/view/theme/helium/css/common.css
+++ b/catalog/view/theme/helium/css/common.css
@@ -192,12 +192,6 @@ input[type=submit]:hover {
 }
 
 /* Forms */
-form {
-    /* display: grid; */
-    /* place-content: center; */
-    /* grid-template-rows: 1fr; */
-    /* max-width: 100%; */
-}
 label {cursor:pointer;user-select: none;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;display: flex;flex-direction: row;align-items: center;}
 .form-group {display: flex;flex: 1;align-items: center; padding: 0.5rem;  border-radius: var(--radius); flex-wrap: wrap; }
 .form-group label {flex: 1 1 auto;max-width: 8rem}
@@ -411,7 +405,7 @@ header, nav, footer, .breadcrumbs {
     flex-wrap: wrap;
 }
 
-
+.f-center{display: flex; align-self: center;}
 
 nav, hgroup {
     justify-content: space-between;
