--- a/catalog/view/theme/helium/css/common.css
+++ b/catalog/view/theme/helium/css/common.css
@@ -191,9 +191,53 @@ input[type=submit]:hover {
     background:var(--bg-button)
 }
 
+input::-webkit-calendar-picker-indicator, input::calendar-picker-indicator {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: transparent;
+    margin: 3px;
+}
+input[type="time"]::after {
+    position: absolute;
+    right: 4px;
+    content: "\01F552";
+    font-size: 28px;
+    line-height: 1;
+    /* -moz-appearance:initial; */
+}
+input[type="date"]::after, input[type="datetime-local"]::after {
+    position: absolute;
+    right: 4px;
+    content: "\01F4C5";
+    font-size: 28px;
+    line-height: 1;
+    /* -moz-appearance:initial; */
+}
+/* This code works but overflows Firefox native calendar button so it's dropped for now */
+/* @supports (-moz-transform: translate(0, 0)) {
+    .form-group.time label::after {
+        content: "\01F552";
+        position: absolute;
+        right: 1rem;
+        z-index: 2;
+        font-size: 28px;
+        line-height: 1;
+    }
+    .form-group.date label::after {
+        content: "\01F4C5";
+        position: absolute;
+        right: 1rem;
+        z-index: 2;
+        font-size: 28px;
+        line-height: 1;
+    }
+} */
+
+
 /* Forms */
 label {cursor:pointer;user-select: none;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;display: flex;flex-direction: row;align-items: center;}
-.form-group {display: flex;flex: 1;align-items: center; padding: 0.5rem;  border-radius: var(--radius); flex-wrap: wrap; }
+.form-group {display: flex;flex: 1;align-items: center; padding: 0.5rem;  border-radius: var(--radius); flex-wrap: wrap; position: relative;}
 .form-group label {flex: 1 1 auto;max-width: 8rem}
 /* For multiple lined up inputs in form group */
 .form-group input:first-of-type:not(:last-of-type) {border-radius: var(--radius) 0 0 var(--radius);margin-right: 2px;}
@@ -638,9 +682,13 @@ button.primary {
     text-transform: uppercase;
     transition: background-position .2s;
     background-size: 200% auto;
-    color: white;            
+    color: white;
     flex: 1; /* Grow primary button in button group */
-    user-select: none;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;
+    user-select: none;
+    -webkit-user-select: none;
+    display: flex;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 button:disabled,
 input:disabled,
