Minor design improvemrnts

--- a/catalog/view/theme/helium/template/common/success.twig
+++ b/catalog/view/theme/helium/template/common/success.twig
@@ -1,12 +1,12 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main role="main" id="common-success">
-  <div class="f-center">
+  <div class="f-center alert-success">
     {{ content_top }}
     <div>
       <h1>{{ heading_title }}</h1>
       {{ text_message }}
-      <div class="row">
+      <div class="btn-group">
         <a href="{{ continue }}" class="primary">{{ button_continue }}</a>
       </div>
     </div>
