--- a/catalog/view/theme/helium/template/common/content_bottom.twig
+++ b/catalog/view/theme/helium/template/common/content_bottom.twig
@@ -1,5 +1,5 @@
 {% if modules %}
-<div id="content-bottom">
+<div id="content_bottom">
   {% for module in modules %}
     {{ module }}
   {% endfor %}
