--- a/catalog/view/theme/helium/template/extension/payment/cheque.twig
+++ b/catalog/view/theme/helium/template/extension/payment/cheque.twig
@@ -6,32 +6,6 @@
   <p>{{ address }}</p>
   <p>{{ text_payment }}</p>
 </div>
-<div class="buttons">
-  <div class="pull-right">
-    <input type="button" value="{{ button_confirm }}" id="button-confirm" class="primary" />
-  </div>
+<div class="btn-group">
+  <input type="button" value="{{ button_confirm }}" id="js_button_confirm" class="primary" />
 </div>
-<script type="text/javascript"><!--
-$('#button-confirm').on('click', function() {
-	$.ajax({
-		url: 'index.php?route=extension/payment/cheque/confirm',
-		dataType: 'json',
-		beforeSend: function() {
-			// $('#button-confirm').button('loading');
-		},
-		complete: function() {
-			// $('#button-confirm').button('reset');
-		},
-		success: function(json) {
-			if (json['redirect']) {
-				location = json['redirect'];	
-			}
-		},
-		error: function(xhr, ajaxOptions, thrownError) {
-			console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-			alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-		}
-	});
-
-});
-//--></script>
