--- a/catalog/view/theme/helium/template/extension/payment/cod.twig
+++ b/catalog/view/theme/helium/template/extension/payment/cod.twig
@@ -1,3 +1,3 @@
-<div class="buttons">
-	<button type="button" id="button-confirm" data-confirm="index.php?route=extension/payment/cod/confirm" class="primary">{{ button_confirm }}</button>
+<div class="btn-group">
+	<button type="button" id="js_button_confirm" data-confirm="index.php?route=extension/payment/cod/confirm" class="primary">{{ button_confirm }}</button>
 </div>
