--- a/catalog/view/theme/helium/template/extension/payment/free_checkout.twig
+++ b/catalog/view/theme/helium/template/extension/payment/free_checkout.twig
@@ -1,23 +1,3 @@
-<div class="buttons">
-  <div class="pull-right">
-    <input type="button" value="{{ button_confirm }}" id="button-confirm" class="primary" />
-  </div>
+<div class="btn-group">
+  <input type="button" value="{{ button_confirm }}" id="js_button_confirm" class="primary" />
 </div>
-<script type="text/javascript"><!--
-$('#button-confirm').on('click', function() {
-	$.ajax({
-		type: 'get',
-		url: 'index.php?route=extension/payment/free_checkout/confirm',
-		cache: false,
-		beforeSend: function() {
-			// $('#button-confirm').button('loading');
-		},
-		complete: function() {
-			// $('#button-confirm').button('reset');
-		},
-		success: function() {
-			location = '{{ continue }}';
-		}
-	});
-});
-//--></script>
