--- a/catalog/view/theme/helium/template/account/wishlist_table.twig
+++ b/catalog/view/theme/helium/template/account/wishlist_table.twig
@@ -30,6 +30,7 @@
                 {% else %} <b>{{ product.special }}</b> <s>{{ product.price }}</s> {% endif %} </div>
               {% endif %}</td>
             <td class="text-right">
+              {# Buttons #}
               <button type="button" 
                 {% if product.price %} 
                   data-action="cartAdd" 
@@ -43,7 +44,13 @@
                 title="{{ button_cart }} {{ product.name }}">
                 <i class="icon-cart"></i>
               </button>
-              <button data-action="wishlistRemove" data-product-id="{{ product.product_id }}" title="{{ button_remove }}" class="close"></button>
+              <button 
+                data-action="ajax" 
+                data-url="account/wishlist/remove" 
+                data-product_id="{{ product.product_id }}" 
+                title="{{ button_remove }}" 
+                class="close">
+              </button>
             </td>
           </tr>
         {% endfor %}
