--- a/catalog/view/theme/helium/template/common/header.twig
+++ b/catalog/view/theme/helium/template/common/header.twig
@@ -90,7 +90,7 @@
       {{ currency }}
       {{ language }}
       <a class="phone button" href="tel:{{ telephone }}" rel="phone" title="{{ text_phones }}" aria-label="{{ text_phones }}"><i class="icon-phone"></i><span class="hidden-md">{{ telephone }}</span></a>
-      <button data-action="contactsModal" aria-haspopup="dialog" title="{{ text_location }}" aria-label="{{ text_location }}"><i class="icon-location"></i>{{ text_location }}</button>
+      <button data-action="ajax" data-url="information/contact/showContactsModal" aria-haspopup="dialog" title="{{ text_location }}" aria-label="{{ text_location }}"><i class="icon-location"></i>{{ text_location }}</button>
       <div class="account-menu dropdown">
         <button data-accordion-target="account" type="button" title="{{ text_account }}" aria-label="{{ text_account }}">
           <i class="icon-user"></i>
@@ -111,8 +111,8 @@
           </div>
         </div>
       </div>
-      <button data-action="wishlistModal" aria-haspopup="dialog" id="wishlist-total" title="{{ text_wishlist }}" aria-label="{{ text_wishlist }}"><i class="icon-heart"></i> <span class="hidden-md"> {{ text_wishlist_count }} </span></button>
-      <button data-action="compareModal" aria-haspopup="dialog" id="compare-total" title="{{ text_compare }}" aria-label="{{ text_compare }}"><i class="icon-compare"></i><span class="hidden-md">{{ text_compare_count }}</span></button>
+      <button data-action="ajax" data-url="account/wishlist/showWishlistModal" aria-haspopup="dialog" id="wishlist-total" title="{{ text_wishlist }}" aria-label="{{ text_wishlist }}"><i class="icon-heart"></i> <span class="hidden-md"> {{ text_wishlist_count }} </span></button>
+      <button data-action="ajax" data-url="product/compare/showCompareModal" aria-haspopup="dialog" id="compare-total" title="{{ text_compare }}" aria-label="{{ text_compare }}"><i class="icon-compare"></i><span class="hidden-md">{{ text_compare_count }}</span></button>
     </div>
   </nav>
   <nav id="js_nav_main">
