--- a/catalog/view/theme/helium/template/product/product_miniature.twig
+++ b/catalog/view/theme/helium/template/product/product_miniature.twig
@@ -49,8 +49,8 @@
         title="{{ button_cart }} {{ product.name }}">
         <i class="icon-cart"></i> <span>{{ button_cart }}</span>
       </button>
-      <button type="button" data-action="wishlistAdd" data-product-id="{{ product.product_id }}" aria-haspopup="dialog" class="wishlist" title="{{ button_wishlist }}"><i class="icon-heart"></i></button>
-      <button type="button" data-action="compareAdd" data-product-id="{{ product.product_id }}" aria-haspopup="dialog" class="compare" title="{{ button_compare }}"><i class="icon-compare"></i></button>
+      <button type="button" data-action="ajax" data-url="account/wishlist/add" data-product_id="{{ product.product_id }}" aria-haspopup="dialog" class="wishlist" title="{{ button_wishlist }}"><i class="icon-heart"></i></button>
+      <button type="button" data-action="ajax" data-url="product/compare/add" data-product_id="{{ product.product_id }}" aria-haspopup="dialog" class="compare" title="{{ button_compare }}"><i class="icon-compare"></i></button>
     </div>
   </div>
 </article>
